fixed loader spacing

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ div {
     padding-left: 15px;
     padding-top: 15px;
     padding-bottom: 15px;
+    margin-top: 10px;
 }
 
 @keyframes spin {
